added payment-bcp-qr as require

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "emizoripx/payment-qr-bcp":"dev-master"
+    },
 
     "autoload":{
         "psr-4":{
