--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "emizoripx/payment-qr-bcp":"dev-master"
+        "emizoripx/payment-qr-bcp":"^1.1"
     },
 
     "autoload":{
